--- a/코드짜보자/메인페이지.html
+++ b/코드짜보자/메인페이지.html
@@ -490,7 +490,7 @@
             <div id="navigator_1"></div>
             <div id="navigator_2">
                 <ul id="navi">
-                    <li><a href="#" id="navi1">맛집등록요청/삭제</a></li>
+                    <li><a href="#" id="navi1">맛집등록/삭제 요청</a></li>
                     <li><a href="#" id="navi2">맛슐랭</a></li>
                     <li><a href="#" id="navi3">맛집뺑뺑이</a></li>
                 </ul>
